# voicebox

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
diagrams/: index.html
docs/: architecture-diagram.excalidraw  architecture-notes.md  architecture-report.md
docs/design/: architecture-review.md  architecture-stages.html  upgrade-roadmap.md  voice-testing-landscape.md
scripts/: debug_shim_load.py  e2e_readme_call.py  smoke_browser_shim.py  smoke_full_duplex.py
src/pipecat_mcp_server/: agent.py  agent_ipc.py  bot.py  browser_session.py  runner_args.py  server.py  shim.js
src/voicebox/: agent.py  agent_ipc.py  bot.py  browser_session.py  raw_pcm_serializer.py  server.py  shim.js
src/voicebox/processors/: kokoro_tts.py
