[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qz-mcp-server"
dynamic = ["version"]
description = "MCP server that drives a synthetic voice user against browser-based voice apps via a Playwright-controlled Chromium with an audio shim."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["pipecat", "mcp", "voice", "ai", "assistant", "speech"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "kokoro-onnx>=0.5.0,<1",
    "loguru>=0.7.0,<1",
    "mcp>=1.26",
    "pip>=25.3",
    "pipecat-ai[local-smart-turn,runner,silero,websocket]>=1.1.0",
    "pipecat-ai[mlx-whisper]>=1.1.0; sys_platform == 'darwin'",
    "pipecat-ai[whisper]>=1.1.0; sys_platform != 'darwin'",
    "playwright>=1.50,<2",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.32.5,<3",
]

[project.urls]
Source = "https://github.com/IsisChameleon/qz-mcp-server"
Issues = "https://github.com/IsisChameleon/qz-mcp-server/issues"

[dependency-groups]
dev = [
    "build~=1.2.2",
    "pip-tools~=7.4.1",
    "pyright>=1.1.404,<1.2",
    "ruff>=0.12.11,<1",
    "setuptools~=78.1.1",
    "setuptools_scm~=8.3.1",
]

[project.scripts]
qz-mcp-server = "pipecat_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"

[tool.ruff]
exclude = [".git"]
line-length = 100

[tool.ruff.lint]
select = [
    "D", # Docstring rules
    "I", # Import rules
]
ignore = [
    "D105",  # Missing docstring in magic methods (__str__, __repr__, etc.)
]

[tool.ruff.lint.per-file-ignores]
# Skip D104 (missing docstring in public package) for __init__.py files
"**/__init__.py" = ["D104"]
